Updated some documentation.
